// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render table of contents 1`] = `
<div>
  <div>
    <nav>
      <div>
        <input
          aria-label="Filter by name"
          onChange={[Function]}
          placeholder="Filter by name"
          value="foo"
        />
      </div>
      <div>
        foo
      </div>
    </nav>
  </div>
</div>
`;

exports[`should filter list when search field contains a query 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Button",
          "open": true,
          "sections": Array [],
          "slug": "button",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Input",
          "open": true,
          "sections": Array [],
          "slug": "input",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Textarea",
          "open": true,
          "sections": Array [],
          "slug": "textarea",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter list when search field contains a query 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="but"
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Button",
          "open": true,
          "sections": Array [],
          "slug": "button",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Introduction",
          "open": true,
          "sections": Array [],
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Buttons",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "heading": false,
                  "name": "Button",
                  "open": true,
                  "slug": "button",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "heading": true,
          "name": "Buttons",
          "open": true,
          "sections": Array [],
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Forms",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "heading": false,
                  "name": "Input",
                  "open": true,
                  "slug": "input",
                },
                Object {
                  "content": undefined,
                  "heading": false,
                  "name": "Textarea",
                  "open": true,
                  "slug": "textarea",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "heading": true,
          "name": "Forms",
          "open": true,
          "sections": Array [],
          "slug": "forms",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should filter section names 2`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm="frm"
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Forms",
          "open": true,
          "sections": Array [],
          "slug": "forms",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should render a renderer 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Button",
          "open": true,
          "sections": Array [],
          "slug": "button",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Input",
          "open": true,
          "sections": Array [],
          "slug": "input",
        },
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Textarea",
          "open": true,
          "sections": Array [],
          "slug": "textarea",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;

exports[`should render renderer with sections with nested components 1`] = `
<Styled(TableOfContents)
  onSearchTermChange={[Function]}
  searchTerm=""
>
  <ComponentsList
    hashPath={Array []}
    items={
      Array [
        Object {
          "components": Array [],
          "content": undefined,
          "heading": false,
          "name": "Introduction",
          "open": true,
          "sections": Array [],
          "slug": "introduction",
        },
        Object {
          "components": Array [
            Object {
              "name": "Button",
              "slug": "button",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Buttons",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "heading": false,
                  "name": "Button",
                  "open": true,
                  "slug": "button",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "heading": true,
          "name": "Buttons",
          "open": true,
          "sections": Array [],
          "slug": "buttons",
        },
        Object {
          "components": Array [
            Object {
              "name": "Input",
              "slug": "input",
            },
            Object {
              "name": "Textarea",
              "slug": "textarea",
            },
          ],
          "content": <ComponentsList
            hashPath={
              Array [
                "Forms",
              ]
            }
            items={
              Array [
                Object {
                  "content": undefined,
                  "heading": false,
                  "name": "Input",
                  "open": true,
                  "slug": "input",
                },
                Object {
                  "content": undefined,
                  "heading": false,
                  "name": "Textarea",
                  "open": true,
                  "slug": "textarea",
                },
              ]
            }
            useHashId={true}
            useRouterLinks={false}
          />,
          "heading": true,
          "name": "Forms",
          "open": true,
          "sections": Array [],
          "slug": "forms",
        },
      ]
    }
    useHashId={false}
    useRouterLinks={false}
  />
</Styled(TableOfContents)>
`;
